html&styles: consultation section

--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -17,4 +17,10 @@
 		line-height: 25px;
 		margin-top: 65px;
 	}
+	&_submit {
+		width: 303px;
+		height: 58px;
+		font-weight: 500;
+		font-size: 16px;
+	}
 }
