--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -1,6 +1,12 @@
 .title {
 	font-weight: 700;
-	font-size: 30px;
+	font-size: 36px;
+	line-height: 54px;
 	text-align: center;
 	color: #0d0d0d;
+	text-transform: uppercase;
+	&_left {
+		text-align: left;
+		color: #ffffff;
+	}
 }
