--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -32,7 +32,7 @@
 		text-align: center;
 		color: #0d0d0d;
 		a {
-			color: #ff0000;
+			color: $main_color;
 			text-decoration: underline;
 		}
 	}
