--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -10,6 +10,10 @@
 	text-align: center;
 	text-transform: uppercase;
 	color: #ffffff;
+	transition: 0.3s all;
+	&:hover {
+		background: $second_color;
+	}
 	&_main {
 		width: 300px;
 		height: 50px;
