--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,7 +5,13 @@
 * {
 	font-family: "Museo Sans Cyrl", sans-serif;
 }
-
+html,
+body {
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
+}
 .container {
 	max-width: 950px;
 	margin: 0 auto;
@@ -24,3 +30,4 @@
 @import "blocks/footer";
 @import "blocks/modal";
 @import "blocks/pageup";
+@import "base/media";
